variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:14: error: ')' expected but '}' found.
	}
        ^